--- a/todo.txt
+++ b/todo.txt
@@ -36,9 +36,9 @@ remaining :
 
 3. hide orders which are executed from requests page
 
+4. verify status of orders in volunteer page
 
-
-
+5. toast functions
 
 
 
