--- a/todo.txt
+++ b/todo.txt
@@ -32,3 +32,7 @@ Remaining :
 14. About us
 
 15. Forgot password using nodemailer / sendgrid
+
+16. - Add genuine medicines in database
+
+17. - While donating in form user must be able to select from medicines to donate
